--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <h1 class="display-4">A demonstration static website</h1>
+                <h1 class="display-4 mt-5">A demonstration static website</h1>
                 <p>A static site that can be deployed automatically using GitHub Actions.</p>
             </div>
         </div>
